Add commodore image and G2 favicon

--- a/themes/advanced/content/2022-08-06.mdx
+++ b/themes/advanced/content/2022-08-06.mdx
@@ -26,6 +26,8 @@ For the last 30 years or so I simply had a lot of fun playing around with everyt
 programming languages. I learned some good stuff and a lot of bad stuff. I always liked to write nice code and
 seldom I succeeded in this task.
 
+![Where it all began](./images/commodore_64.jpg)
+
 I was approximately eight years old when my uncle gave me a beautiful Commodore 64 for Christmas.
 I was so excited... After a few weeks of continuous playing, my father bought a Basic manual;
 he explained to me that using those words we could create the games I played and liked so much.
