Update personal info in gatsby config Add avatar Move website configs to the right gatsby-config file

--- a/themes/advanced/content/2022-08-06.mdx
+++ b/themes/advanced/content/2022-08-06.mdx
@@ -5,7 +5,7 @@ coverAlt: "Quite relaxing, isn't it?"
 description: "Description"
 datePublished: "2022-08-06"
 dateModified: "2022-08-06"
-excerpt: "Welcome! This is my first post! You were looking forward to it, weren't you?"
+excerpt: "Welcome! This is my first post! You were looking forward to it, weren't you? Go on and have a look at it"
 category: "tech"
 tags:
   - commodore64
